# Arxiv-Reviewer

./: README.md  arxiv_superreview.py  pyproject.toml  schema.py
arxiv_reviewer/: __init__.py  __main__.py
